Removed max height on add-participant-plan to fix some odd spacing in Chrome

--- a/web/src/stylesheets/components/_miwt-procedure.scss
+++ b/web/src/stylesheets/components/_miwt-procedure.scss
@@ -3,7 +3,7 @@
 
 
 table.add-participant-plan {
-	min-height: 20rem;
+	//min-height: 20rem;
 	.miwt-procedure-card{
 
 	}
